[gd_scene load_steps=23 format=3 uid="uid://526ptnhabi5m"]

[ext_resource type="Texture2D" uid="uid://ch1ou7a2kus75" path="res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Pawn/Blue/Pawn_Blue.png" id="1_5rx3a"]
[ext_resource type="Script" path="res://Characters/villager.gd" id="1_rhc3x"]
[ext_resource type="Texture2D" uid="uid://br4ck8libylbh" path="res://Assets/Tiny Swords (Update 010)/Resources/Resources/W_Idle.png" id="2_l8mfi"]
[ext_resource type="Script" path="res://StateMachine/VillagerStateMachine.gd" id="3_vxylo"]
[ext_resource type="Script" path="res://StateMachine/VillagerIdleState.gd" id="4_1sv5j"]
[ext_resource type="Script" path="res://StateMachine/VillagerLooting.gd" id="5_jieob"]
[ext_resource type="Script" path="res://StateMachine/VillagerAxeState.gd" id="7_1fc78"]
[ext_resource type="Script" path="res://StateMachine/State.gd" id="8_3evce"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iakhw"]
size = Vector2(40, 20)

[sub_resource type="Animation" id="Animation_7482l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_3en1c"]
resource_name = "attack"

[sub_resource type="Animation" id="Animation_cwy4s"]
resource_name = "building"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_i6bo2"]
resource_name = "chopping"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_gduym"]
resource_name = "idle"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_un71r"]
resource_name = "idle_holding"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29]
}

[sub_resource type="Animation" id="Animation_p8mg0"]
resource_name = "leftchopping"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_rxlvd"]
resource_name = "run"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_itmrr"]
resource_name = "run_holding"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c6isa"]
_data = {
"RESET": SubResource("Animation_7482l"),
"attack": SubResource("Animation_3en1c"),
"building": SubResource("Animation_cwy4s"),
"chopping": SubResource("Animation_i6bo2"),
"idle": SubResource("Animation_gduym"),
"idle_holding": SubResource("Animation_un71r"),
"leftchopping": SubResource("Animation_p8mg0"),
"run": SubResource("Animation_rxlvd"),
"run_holding": SubResource("Animation_itmrr")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_54ed2"]
size = Vector2(50, 55)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fn3h4"]
radius = 11.0
height = 75.9779

[sub_resource type="CircleShape2D" id="CircleShape2D_lq8dq"]
radius = 437.138

[node name="Villager" type="CharacterBody2D"]
script = ExtResource("1_rhc3x")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_5rx3a")
hframes = 6
vframes = 6
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 21)
shape = SubResource("RectangleShape2D_iakhw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c6isa")
}
autoplay = "idle_holding"

[node name="HoldResource" type="Node2D" parent="."]
visible = false
position = Vector2(-158, -1)

[node name="WIdle" type="Sprite2D" parent="HoldResource"]
position = Vector2(161, -52)
texture = ExtResource("2_l8mfi")
flip_h = true

[node name="WIdle3" type="Sprite2D" parent="HoldResource"]
position = Vector2(150, -50)
texture = ExtResource("2_l8mfi")
flip_h = true

[node name="WIdle2" type="Sprite2D" parent="HoldResource"]
position = Vector2(155, -62)
texture = ExtResource("2_l8mfi")
flip_h = true

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state", "character")]
script = ExtResource("3_vxylo")
initial_state = NodePath("Idle")
character = NodePath("..")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_1sv5j")

[node name="Looting" type="Node" parent="StateMachine"]
script = ExtResource("5_jieob")

[node name="Axe" type="Node" parent="StateMachine"]
script = ExtResource("7_1fc78")

[node name="State2" type="Node" parent="StateMachine"]
script = ExtResource("8_3evce")

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
z_index = 1
y_sort_enabled = true
shape = SubResource("RectangleShape2D_54ed2")

[node name="HitRange" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitRange"]
position = Vector2(2, 18)
rotation = 1.54666
shape = SubResource("CapsuleShape2D_fn3h4")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_lq8dq")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[connection signal="pressed" from="TouchScreenButton" to="." method="_on_touch_screen_button_pressed"]
[connection signal="body_entered" from="HitRange" to="." method="_on_hit_range_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
